--- a/html/index.html
+++ b/html/index.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 	<article>
-		<h2>序言</h2>
 		<p>
 			   &emsp;&emsp;c++的http服务器
 			   <ol>
 			   		<li>基于epoll</li>
 			   		<li>线程池处理网络事件</li>
 			   </ol>
-		</p>
+        </p>
+        <img src="img/enhydra.gif">  
 	</article>
 </body>
 </html>
