--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
 			   		<li>线程池处理网络事件</li>
 			   </ol>
         </p>
-        <img src="img/enhydra.gif">  
+        <img src="img/timg.jpg">  
 	</article>
 </body>
 </html>
